# OpenCV-CPP-Tutorial

./: LICENSE  README.md
10_Basic_Image_Processing/: 1_Accessing_Pixel_Intensity_Values.md  2_Image_Arithmetic.md  3_Image_Blending.md  4_Bitwise_Operators.md  5_Masking.md  6_Color_Spaces.md  README.md
10_Basic_Image_Processing/Example-Code/: CMakeLists.txt
10_Basic_Image_Processing/Example-Code/Image-Processing-app/: CMakeLists.txt  main.cpp
10_Basic_Image_Processing/Example-Code/include/UtilityFunctions/: utility_functions.h
10_Basic_Image_Processing/Example-Code/src/UtilityFunctions/: utility_functions.cpp
11_Image_Borders/: Image_Borders.md  README.md
11_Image_Borders/Example-Code/: CMakeLists.txt
11_Image_Borders/Example-Code/Image-Border-app/: CMakeLists.txt  create-borders.json  create-borders.yaml  main.cpp
12_Geometrical_Transformations/: 1_Introduction.md  2_Interpolation_Techniques.md
12_Geometrical_Transformations/Example-Code/: CMakeLists.txt
12_Geometrical_Transformations/Example-Code/include/UtilityFunctions/: utility_functions.h
12_Geometrical_Transformations/Example-Code/src/UtilityFunctions/: utility_functions.cpp
1_Basic_Core_Types/: 1_Point_Data_Type.md  2_Size_Data_Type.md  3_Scalar_Data_Type.md  4_Rect_Data_Type.md  5_RotatedRectangle_Data_Type.md  6_Fixed_Matrix_Data_Type.md  7_Vector_Data_Type.md  Point_Data_Type.md  README.md
1_Basic_Core_Types/Example-Code/: CMakeLists.txt
1_Basic_Core_Types/Example-Code/BASIC_CORE_TYPES-app/: CMakeLists.txt  main.cpp
2_Large_Dense_Array_Mat/: 1_Introduction.md  2_Element_Access.md  3_Copy_Mat_Objects.md  4_Large_Array_Algebra.md  5_More_cvMat_Functions.md  CMakeLists.txt  README.md
2_Large_Dense_Array_Mat/Example-Code/: CMakeLists.txt
2_Large_Dense_Array_Mat/Example-Code/Mat-app/: CMakeLists.txt  Main.cpp
2_Large_Dense_Array_Mat/Example-Code/src/: CMakeLists.txt
2_Large_Dense_Array_Mat/Example-Code/src/UtilityFunctions/: utility_functions.cpp
2_Large_Dense_Array_Mat/Mat-app/: CMakeLists.txt  Main.cpp
2_Large_Dense_Array_Mat/include/UtilityFunctions/: utility_functions.h
2_Large_Dense_Array_Mat/src/: CMakeLists.txt
3_Saturation_Casting/: README.md  Saturation_Casting.md
3_Saturation_Casting/Example-Code/: CMakeLists.txt
3_Saturation_Casting/Example-Code/Saturation_Casting-app/: CMakeLists.txt  main.cpp
3_Saturation_Casting/Example-Code/src/: CMakeLists.txt
4_Sparse_Large_Arrays/: README.md  Sparse_Large_Arrays.md
4_Sparse_Large_Arrays/Example-Code/: CMakeLists.txt
4_Sparse_Large_Arrays/Example-Code/Sparse_Arrays-app/: CMakeLists.txt  main.cpp
4_Sparse_Large_Arrays/Example-Code/include/UtilityFunctions/: utility_functions.h
5_Helper_Objects/: Helper_Objects.md  README.md
5_Helper_Objects/Example-Code/: CMakeLists.txt
5_Helper_Objects/Example-Code/Helper-Objects-app/: CMakeLists.txt  main.cpp
5_Helper_Objects/Example-Code/include/UtilityFunctions/: utility_functions.h
6_Command_Line_Arguments/: Command_Line_Arguments.md  README.md
6_Command_Line_Arguments/Example-Code/: CMakeLists.txt
6_Command_Line_Arguments/Example-Code/Command_Line_Args_app/: CMakeLists.txt  main.cpp
6_Command_Line_Arguments/Example-Code/src/: CMakeLists.txt
7_Serializing_and_Deserializing/: README.md  Serializing_and_Deserializing.md
7_Serializing_and_Deserializing/Example-Code/: CMakeLists.txt
7_Serializing_and_Deserializing/Example-Code/Read-Write-Data-app/: CMakeLists.txt  main.cpp
7_Serializing_and_Deserializing/Example-Code/include/UtilityFunctions/: utility_functions.h
7_Serializing_and_Deserializing/Example-Code/src/: CMakeLists.txt
7_Serializing_and_Deserializing/Example-Code/temporary-files/: write.json  write.xml  write.yaml  write.yml
8_Read_Write_Images/: 1_Introduction.md  2_Read_Image_Files.md  3_Write_Image_Files.md  4_Image_Compression.md  5_Image_Decompression.md  README.md
8_Read_Write_Images/Example-Code/: CMakeLists.txt
8_Read_Write_Images/Example-Code/Read-Write-Data-app/: CMakeLists.txt  Save_Image_As.cpp  Save_To_Multipage_File.cpp  image_compression.cpp  image_decompression.cpp  read_and_display_image.cpp  read_display_multiple_images.cpp  read_multi-page_image.cpp
8_Read_Write_Images/Example-Code/images/: test.tiff
8_Read_Write_Images/Example-Code/include/UtilityFunctions/: utility_functions.h
9_Drawing_and_Annotation/: 1_Drawing.md  2_Annotation.md  Annotation.md  Drawing.md  README.md
9_Drawing_and_Annotation/Example-Code/: CMakeLists.txt
9_Drawing_and_Annotation/Example-Code/Draw-Annotate-app/: CMakeLists.txt  main.cpp
9_Drawing_and_Annotation/Example-Code/include/UtilityFunctions/: utility_functions.h
9_Drawing_and_Annotation/Example-Code/src/UtilityFunctions/: utility_functions.cpp
